fixed issue with final page not showing

--- a/app/assets/stylesheets/components/_single_stampbook.scss
+++ b/app/assets/stylesheets/components/_single_stampbook.scss
@@ -148,13 +148,21 @@
 }
 
 .page-number {
+  position:absolute; 
+  bottom: 0; 
+  right: 45%;
   display: flex;
   justify-content: center;
   font-size: 13px;
   color: #aca9a9;
 }
 
-
+.final-page{
+  color: rgba(0,0,0, 0.4); 
+  position: absolute; 
+  top:45%;
+  right: 20%;
+}
 
 
 
